Изменения в соответствии с замечаниями